syntax = "proto3";

package rs.chekov.api.streams;

service Stream {
  rpc GetStreamList(GetStreamListRequest) returns ( GetStreamListResponse );
}

message GetStreamListRequest {}
message GetStreamListResponse {
  repeated string streams = 1;
}

